web/css/master.css
/* reset */
html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
	margin:0;
	padding:0;
	border:0;
	outline:0;
	font-size:100%;
	vertical-align:baseline;
	background:transparent;
}

html, body {
	min-height: 100%;
	font-family: "Helvetica Neue", clean, sans-serif;
}

body {
	width: 100%;
	background: white;
	line-height: 1.2;
	overflow-x: hidden;
	overflow-y: auto;

	animation-name: small;
	animation-duration: .001s;
}

.site-header {
	position: relative;
	z-index: 2;
	padding: .5em 0;
	background: white;
	box-shadow: 0 1px 2px #aaa;
}

.site-header h1 {
	padding-left: .5em;
}

.off-canvas-menu,
.off-canvas-side {
	padding: 0 .5em;
	font-size: 1.3em;
	cursor: pointer;
}

.off-canvas-side {
	float: right;
}

[role=navigation],
[role=main],
[role=complementary] {
	width: 100%;
	transition: all .2s ease 0s;
	overflow: hidden;
}

[role=navigation] {
	position: relative;
	z-index: 1;
	float: left;
	box-shadow: 1px 0 2px #aaa;
	background: rgb(238, 238, 238);

	margin-left: -100%;
}

[role=complementary] {
	position: relative;
	z-index: 1;
	float: left;
	box-shadow: -1px 0 2px #aaa;
	background: rgb(238, 238, 238);

	margin-right: -100%;
}

[role=main] {
	float: left;
	background: white;
	position: relative;
}

.menu-open [role=navigation] {
	width: 90%;
	margin-left: 0;
}

.menu-open [role=main] {
	margin-right: -100%;
}

.side-open [role=complementary] {
	width: 90%;
	margin-right: 0;
}

.side-open [role=main] {
	margin-left: -90%;
}

a, a:hover, a:active, a:link, a:visited {
	text-decoration: none;
	color: #3bf;
}

h1 {
	font-size: 1.6em;
}

h2 {
	font-size: 1.2em;
}

ul, ol {
	list-style: none;
	padding: 0;
	margin: 0;

}

ul > li {
	list-style: none;
	padding: 0;
	margin: 0;
}

input, textarea {
	width: 100%;
	margin: .5em 0;
	padding: 1em;
	display: block;
	border: 1px solid rgb(130, 130, 130);
	box-sizing: border-box;
}

input:not([type=button]):not([type=submit]):focus, textarea:focus {
	border: 1px solid rgb(0, 130, 240);
}

.form {
	padding: 0 .5em;
	background: rgba(0, 0, 0, .1);
	box-shadow: 0 1px 2px rgb(136, 136, 136) inset;
}

.site-header h1 {
	display: inline-block;
}

.site-header nav {
	float: right;
	font-size: 1.6em;
}

.site-header nav .item {
	height: 100%;
	padding: 0 .3em;
	display: inline-block;
	cursor: pointer;
}

[role=navigation] .header,
[role=complementary]j .header {
	padding: 0.4em 0 .5em .7em;
	border-bottom: 1px solid rgb(237, 237, 237);
	background: rgb(245, 245, 245);
	cursor: pointer;
}

[role=navigation] li:not(.fold),
[role=complementary] li:not(.fold) {
	padding: 0.4em 0 .5em .7em;
	border-bottom: 1px solid rgba(0, 0, 0, .1);
	cursor: pointer;
}

[role=navigation] li:not(.fold):hover,
[role=navigation] .header:hover,
[role=complementary] li:not(.fold):hover,
[role=complementary] .header:hover {
	background: rgb(225, 225, 225);
}

[role=navigation] > ul,
[role=complementary] > ul {
	border-bottom: 2px solid white;
}

[role=navigation] ul.feedlist li.fold {
	margin-left: 1em;
}

[role=navigation] li.header.closed + li.fold {
	display: none;
}

[role=main] header {
	border-bottom: 1px solid rgb(235, 235, 235);
	padding: 1.5em 2em;
}

[role=main] article .entry-title {
	padding: .5em 2em;
	border-bottom: 1px solid rgb(238, 238, 238);
	background: rgb(246, 246, 246);
	cursor: pointer;
}

[role=main] article .entry-title.opened {
	background: rgb(223, 223, 223);
}

[role=main] article .entry-title:hover {
	background: rgb(235, 235, 235);
}

[role=main] article .entry-content {
	padding: 1em 3em;
	background: rgb(235, 235, 235);
	line-height: 1.4;
	box-shadow: 0 1px 2px rgb(100, 100, 100) inset;
}

@media all and (min-width: 700px) {
	body {
		animation-name: big;
	}

	.off-canvas-menu {
		display: none;
	}

	[role=navigation] {
		width: 20%;
		margin-left: 0;
	}

	[role=main] {
		width: 80%;
		margin-left: 0;
	}

	[role=complementary] {
		width: 20%;
	}

	.side-open [role=navigation] {
		margin-left: -20%;
	}

	.side-open [role=main] {
		margin-left: 0;
	}

	.side-open [role=complementary] {
		width: 20%;
	}
}

